user/src/pages/selection_menu/selectionMenu.scss
@import "../../styles/_fonts.scss";
@import "../../styles/_variable.scss";
@import "../../styles/_mixin.scss";
@import "~bootstrap/scss/bootstrap";

//  nav and disconnecting button
.nav_SelectionMenu{
    background-color: $black;
    height: 10vh;
    width: 100%;
button{
    height: 100%;
    width: 40vh;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    background-color: $black;
    font-size: 1.2vw;
    font-weight: 600;
    a{
        text-decoration: none;
        color: $white;
    }
    img{
        width: 4vh;
        height: auto;
        filter: brightness(0) saturate(100%) invert(99%) sepia(3%) saturate(832%) hue-rotate(282deg) brightness(116%) contrast(100%);
    }
    &:hover{
        background-color: $white;
        color: white;

        img{
            filter: none;
        }
        a{
            color: $black;
        }
    }
}
}

// main 

.main_SelectionMenu{
    height: 200vh;
    width: 100%;
    div.container-fluid:first-child{
        width: 35%;
        height: 38vh;
        margin-block: 7vh;
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-self: center;

        img{
            @include responsiveImg
        }

        p{
            margin-block: 13vh;
            text-align: center;
            font-size: 1.2vw;
            line-height: 2.5vw;
            font-weight: 600;
            position: absolute;
        }
    }

    // NAVBAR
    div.container-fluid:last-child{
        width: 90%;
        height:fit-content;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        margin-inline: 5%;

    .card_back{
        margin: 3%;
    }
    .card_back:first-child{
        background-image: url("../../../public/assets/photos/key_ring.jpg");
        background-size:cover;
        background-repeat: no-repeat;
        background-position-x: -5.5vh;
    }

    .card_back:nth-child(2){
        background-image: url("../../../public/assets/photos/workflow.jpg");
        background-size:cover;
        background-repeat: no-repeat;
        background-position-x: -5.5vh;
    }

    .card_back:nth-child(3){
        background-image: url("../../../public/assets/photos/solidarity.jpg");
        background-size:cover;
        background-repeat: no-repeat;
        background-position-x: -5.5vh;
    }

    .card_back:nth-child(4){
        background-image: url("../../../public/assets/photos/hire.jpg");
        background-size:cover;
        background-repeat: no-repeat;
        background-position-x: -5.5vh;
    }

    .card_back:nth-child(5){
        background-image: url("../../../public/assets/photos/roadtag.jpg");
        background-size:cover;
        background-repeat: no-repeat;
        background-position-x: -5.5vh;
    }

    .card_back:nth-child(6){
        background-image: url("../../../public/assets/photos/bedroom.jpg");
        background-size:cover;
        background-repeat: no-repeat;
        background-position-x: -25vh;
    }

    .card_back:nth-child(7){
        background-image: url("../../../public/assets/photos/rentroom.jpg");
        background-size:cover;
        background-repeat: no-repeat;
        background-position-x: -10.5vh;
    }

    .card_back:last-child{
        background-image: url("../../../public/assets/photos/food.jpg");
        background-size:cover;
        background-repeat: no-repeat;
        background-position-x: -2.5vh;
    }
    }
}

